# structuraltools-core

./: README.md  pyproject.toml
src/structuraltools/handcalcs/: template.py
src/structuraltools/handcalcs/resources/: template.json
src/structuraltools/units/: __init__.py
tests/structuraltools/handcalcs/: test_template.py
tests/structuraltools/handcalcs/resources/: test_template.json
